# pcb_cam_wannabe

./: README.md
cli_utils/: README.md  pyproject.toml
cli_utils/src/grbr_explain/: min_gerber_parser.py
cli_utils/tests/: some_tests.py
gcode_files/: 1001.cnc  1001.dmp  1002.cnc  2dcfhp1_T2_15mm_2-5mm_flat.cnc
spikes/: iter.py  macros.py  rotation.py
